--- a/svelte-dashboard/package.json
+++ b/svelte-dashboard/package.json
@@ -70,6 +70,7 @@
 	],
 	"dependencies": {
 		"bits-ui": "^2.14.0",
+		"layerchart": "^2.0.0-next.42",
 		"lucide": "^0.546.0",
 		"lucide-svelte": "^0.546.0",
 		"tailwindcss-animate": "^1.0.7"
