--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "my-app",
+	"name": "task-manager",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
@@ -17,40 +17,34 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
-		"@eslint/js": "^9.36.0",
-		"@sveltejs/adapter-vercel": "^5.10.3",
-		"@sveltejs/kit": "^2.43.2",
-		"@sveltejs/package": "^2.5.4",
-		"@sveltejs/vite-plugin-svelte": "^6.2.0",
-		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.18",
-		"@tailwindcss/vite": "^4.1.14",
+		"@eslint/js": "^9.38.0",
+		"@fontsource/fira-mono": "^5.2.7",
+		"@neoconfetti/svelte": "^2.2.2",
+		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/kit": "^2.47.1",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@types/node": "^22",
 		"@vitest/browser": "^3.2.4",
-		"eslint": "^9.36.0",
+		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
 		"globals": "^16.4.0",
-		"playwright": "^1.55.1",
+		"playwright": "^1.56.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.6.14",
-		"publint": "^0.3.13",
-		"svelte": "^5.39.5",
-		"svelte-check": "^4.3.2",
-		"tailwindcss": "^4.1.14",
-		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.44.1",
-		"vite": "^7.1.7",
-		"vite-plugin-devtools-json": "^1.0.0",
+		"svelte": "^5.41.0",
+		"svelte-check": "^4.3.3",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.46.1",
+		"vite": "^7.1.10",
 		"vitest": "^3.2.4",
 		"vitest-browser-svelte": "^1.1.0"
 	},
 	"dependencies": {
-		"bits-ui": "^2.14.0",
-		"layerchart": "^2.0.0-next.42",
-		"lucide": "^0.546.0",
-		"lucide-svelte": "^0.546.0",
+		"@tailwindcss/vite": "^4.1.16",
+		"bits-ui": "^2.14.2",
+		"lucide-svelte": "^0.552.0",
+		"tailwindcss": "^4.1.16",
 		"tailwindcss-animate": "^1.0.7"
 	}
 }
