--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -43,6 +43,7 @@
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.16",
 		"bits-ui": "^2.14.2",
+		"date-fns": "^4.1.0",
 		"lucide-svelte": "^0.552.0",
 		"tailwindcss": "^4.1.16",
 		"tailwindcss-animate": "^1.0.7"
