--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -41,6 +41,7 @@
 		"vitest-browser-svelte": "^1.1.0"
 	},
 	"dependencies": {
+		"@internationalized/date": "^3.10.0",
 		"@tailwindcss/vite": "^4.1.16",
 		"bits-ui": "^2.14.2",
 		"date-fns": "^4.1.0",
